# GLSL-Shader-Includes

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Doxyfile  Doxyfile.bak
res/test/: additionalPushConstants.glsl  additional_include_directories.glsl  additional_include_directories_result.glsl  bindingIndexIncluded.glsl  combined.glsl  combined_as_glsl_result.glsl  combined_as_hlsl_result.glsl  hardcodedBindingIndices.glsl  mixedBindingIndicesAfter.glsl  mixedBindingIndicesAfterResultAsGlsl.glsl  mixedBindingIndicesAfterResultAsHlsl.glsl  mixedBindingIndicesBefore.glsl  pushConstants.glsl  pushConstantsResult.glsl  result.glsl  shaderA.glsl
res/test/additional_include_directories/: result.glsl  to_parse.glsl
res/test/additional_include_directories/additional_include/: some_include.glsl
res/test/additional_push_constants/: result.glsl  to_parse.glsl
res/test/additional_push_constants/include/: push_constants.glsl
res/test/additional_root_constants/: result.hlsl  to_parse.glsl
res/test/additional_root_constants/include/: root_constants.glsl
res/test/combined/: result.glsl  result.hlsl  to_parse.glsl
res/test/glsl_to_hlsl_atomics/: result.hlsl  to_parse.glsl
res/test/glsl_to_hlsl_casts/: result.hlsl  to_parse.glsl
res/test/hardcoded_binding_indices_after_auto/: result.hlsl  to_parse.glsl
res/test/hardcoded_binding_indices_before_auto/: result.glsl  result.hlsl  to_parse.glsl
res/test/include_inside_macro/: result.hlsl  to_parse.glsl
res/test/mixed_language_keywords/: result.glsl  result.hlsl  to_parse.glsl
res/test/mixed_language_keywords_dont_repeat/: to_parse.glsl
res/test/mul_to_operator/: result.glsl  result.hlsl  to_parse.hlsl
res/test/non_zero_base_auto_binding_index/: result.glsl  to_parse.glsl
res/test/sync_funcs/: result.glsl  to_parse.hlsl
src/csl_lib/: CMakeLists.txt
src/csl_lib/src/: CombinedShaderLanguageParser.cpp  CombinedShaderLanguageParser.h
src/csl_tests/: CMakeLists.txt
src/csl_tests/src/: test.cpp
src/project_lib/: CMakeLists.txt
src/project_lib/src/: ShaderIncluder.cpp  ShaderIncluder.h
src/project_tests/: CMakeLists.txt
src/project_tests/src/: test.cpp
